--- a/plugins/gdp/gdp.glade
+++ b/plugins/gdp/gdp.glade
@@ -19,9 +19,9 @@
                 <property name="visible">True</property>
                 <property name="spacing">6</property>
                 <child>
-                  <widget class="GtkLabel" id="match_label">
+                  <widget class="GtkLabel" id="path_label">
                     <property name="visible">True</property>
-                    <property name="label" translatable="yes">Match:</property>
+                    <property name="label" translatable="yes">Find in:</property>
                   </widget>
                   <packing>
                     <property name="expand">False</property>
@@ -30,8 +30,9 @@
                   </packing>
                 </child>
                 <child>
-                  <widget class="GtkComboBoxEntry" id="match_pattern_combobox">
+                  <widget class="GtkComboBoxEntry" id="path_comboentry">
                     <property name="visible">True</property>
+                    <property name="tooltip" translatable="yes">The parent directory to look for matching files.</property>
                   </widget>
                   <packing>
                     <property name="expand">False</property>
@@ -40,32 +41,18 @@
                   </packing>
                 </child>
                 <child>
-                  <widget class="GtkCheckButton" id="re_checkbox">
-                    <property name="label" translatable="yes">Regular expression</property>
+                  <widget class="GtkLabel" id="match_label">
                     <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="receives_default">False</property>
-                    <property name="has_tooltip">True</property>
-                    <property name="tooltip" translatable="yes">Is the text to match a Python regular expression?</property>
-                    <property name="use_underline">True</property>
-                    <property name="draw_indicator">True</property>
+                    <property name="label" translatable="yes">Files that contain:</property>
                   </widget>
                   <packing>
-                    <property name="expand">False</property>
-                    <property name="fill">False</property>
                     <property name="position">2</property>
                   </packing>
                 </child>
                 <child>
-                  <widget class="GtkCheckButton" id="match_case_checkbox">
-                    <property name="label" translatable="yes">Match case</property>
+                  <widget class="GtkComboBoxEntry" id="pattern_comboentry">
                     <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="receives_default">False</property>
-                    <property name="has_tooltip">True</property>
-                    <property name="tooltip" translatable="yes">Match upper and lower case letters?</property>
-                    <property name="use_underline">True</property>
-                    <property name="draw_indicator">True</property>
+                    <property name="tooltip" translatable="yes">Text or pattern to match in the file.</property>
                   </widget>
                   <packing>
                     <property name="expand">False</property>
@@ -78,6 +65,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
+                    <property name="tooltip" translatable="yes">Find in files.</property>
                     <signal name="clicked" handler="on_find_in_files"/>
                     <signal name="activate" handler="on_find_in_files"/>
                     <child>
@@ -103,7 +91,7 @@
                             <child>
                               <widget class="GtkLabel" id="label2">
                                 <property name="visible">True</property>
-                                <property name="label" translatable="yes">Find in files</property>
+                                <property name="label" translatable="yes">Find</property>
                                 <property name="use_underline">True</property>
                               </widget>
                               <packing>
@@ -133,20 +121,100 @@
               </packing>
             </child>
             <child>
+              <widget class="GtkExpander" id="options">
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <child>
+                  <widget class="GtkHBox" id="hbox1">
+                    <property name="visible">True</property>
+                    <property name="spacing">6</property>
+                    <child>
+                      <widget class="GtkLabel" id="file_name_label">
+                        <property name="visible">True</property>
+                        <property name="label" translatable="yes">File name pattern:</property>
+                      </widget>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="position">0</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <widget class="GtkComboBoxEntry" id="file_comboentry">
+                        <property name="visible">True</property>
+                        <property name="tooltip" translatable="yes">match the file path with this python regular expression</property>
+                      </widget>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="position">1</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <widget class="GtkCheckButton" id="re_checkbox">
+                        <property name="label" translatable="yes">Regular expression</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">False</property>
+                        <property name="has_tooltip">True</property>
+                        <property name="tooltip" translatable="yes">Is the text to match a Python regular expression?</property>
+                        <property name="use_underline">True</property>
+                        <property name="draw_indicator">True</property>
+                      </widget>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">False</property>
+                        <property name="position">2</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <widget class="GtkCheckButton" id="match_case_checkbox">
+                        <property name="label" translatable="yes">Match case</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">False</property>
+                        <property name="has_tooltip">True</property>
+                        <property name="tooltip" translatable="yes">Match upper and lower case letters?</property>
+                        <property name="use_underline">True</property>
+                        <property name="draw_indicator">True</property>
+                      </widget>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">False</property>
+                        <property name="position">3</property>
+                      </packing>
+                    </child>
+                  </widget>
+                </child>
+                <child>
+                  <widget class="GtkLabel" id="options_expander">
+                    <property name="visible">True</property>
+                    <property name="label" translatable="yes">Options</property>
+                  </widget>
+                  <packing>
+                    <property name="type">label_item</property>
+                  </packing>
+                </child>
+              </widget>
+              <packing>
+                <property name="expand">False</property>
+                <property name="position">1</property>
+              </packing>
+            </child>
+            <child>
               <widget class="GtkScrolledWindow" id="scrolledwindow1">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <property name="hscrollbar_policy">automatic</property>
+                <property name="vscrollbar_policy">automatic</property>
                 <property name="shadow_type">in</property>
                 <child>
                   <widget class="GtkTreeView" id="match_view">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="headers_clickable">False</property>
                   </widget>
                 </child>
               </widget>
               <packing>
-                <property name="position">1</property>
+                <property name="position">2</property>
               </packing>
             </child>
           </widget>
