--- a/plugins/gdp/find.ui
+++ b/plugins/gdp/find.ui
@@ -10,7 +10,7 @@
         <property name="visible">True</property>
         <property name="border_width">6</property>
         <property name="orientation">vertical</property>
-        <property name="spacing">6</property>
+        <property name="spacing">3</property>
         <child>
           <object class="GtkHBox" id="find_form">
             <property name="visible">True</property>
@@ -29,6 +29,7 @@
             <child>
               <object class="GtkComboBoxEntry" id="path_comboentry">
                 <property name="visible">True</property>
+                <property name="has_frame">False</property>
               </object>
               <packing>
                 <property name="position">1</property>
@@ -48,6 +49,7 @@
             <child>
               <object class="GtkComboBoxEntry" id="pattern_comboentry">
                 <property name="visible">True</property>
+                <property name="has_frame">False</property>
               </object>
               <packing>
                 <property name="position">3</property>
@@ -69,7 +71,6 @@
           </object>
           <packing>
             <property name="expand">False</property>
-            <property name="fill">False</property>
             <property name="position">0</property>
           </packing>
         </child>
@@ -94,6 +95,7 @@
                 <child>
                   <object class="GtkComboBoxEntry" id="file_comboentry">
                     <property name="visible">True</property>
+                    <property name="has_frame">False</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -171,6 +173,14 @@
                 <property name="visible">True</property>
                 <property name="spacing">6</property>
                 <child>
+                  <object class="GtkLabel" id="label2">
+                    <property name="visible">True</property>
+                  </object>
+                  <packing>
+                    <property name="position">3</property>
+                  </packing>
+                </child>
+                <child>
                   <object class="GtkLabel" id="label1">
                     <property name="visible">True</property>
                     <property name="label" translatable="yes">Replace matches:</property>
@@ -185,9 +195,11 @@
                 <child>
                   <object class="GtkComboBoxEntry" id="substitution_comboentry">
                     <property name="visible">True</property>
+                    <property name="has_frame">False</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
+                    <property name="fill">False</property>
                     <property name="pack_type">end</property>
                     <property name="position">1</property>
                   </packing>
